--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun with Triangles</title>
+    <title>Hypotenuse</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -13,29 +13,29 @@
             <div class="nav-brand">Fun with Triangles</div>
             <ul class="nav">
                 <li class="list-item-inline">
-                    <a class="link  link-active " href="/index.html">Is triangle?</a>
+                    <a class="link" href="/isTriangle/isTriangle.html">Is triangle?</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/quiz.js">Quiz</a>
+                    <a class="link" href="/quiz/quiz.html">Quiz</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="">Hypotenuse</a>
+                    <a class="link  link-active " href="/hypotenuse/hyppotenuse.html">Hypotenuse</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="">Area of Triangle</a>
+                    <a class="link" href="/area/area.html">Area of Triangle</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <h1>Angles of Triangles</h1>
-    <label for="angle1" class="labels">Angle1</label>
-    <input placeholder="Enter angle1" type="text" class="input-angle">
-    <label for="angle1" class="labels">Angle1</label>
-    <input placeholder="Enter angle2" type="text" class="input-angle">
-    <label for="angle1" class="labels">Angle1</label>
-    <input placeholder="Enter angle3" type="text" class="input-angle">
-    <button id="is-triangle-btn">Is Triangle?</button>
-    <div id="output-box"></div>
+    <h1>Calculate Hypotenuse of a triangle</h1>
+    <label for="input-value1" class="labels">Enter base value (a) =</label>
+    <input type="number" class="input-value">
+    <label for="input-value2" class="labels">Enter base value (b) =</label>
+    <input  type="number" class="input-value">
+    <button id="submit-btn">Calculate Hypotenuse</button>
+    <h1>Hypotenuse Formula</h1>
+    <h3>√(base² + height²)</h3>
+    <div id="output"></div>
 
     <footer id="footer-size">
         <div id="footer">© | 2022 | adarshbalika</div>
@@ -58,7 +58,5 @@
           </ul>
         </div>
       </footer>
-    <script src="/isTriangle.js"></script>
-    
 </body>
 </html>
