--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -13,10 +13,10 @@
             <div class="nav-brand">Fun with Triangles</div>
             <ul class="nav">
                 <li class="list-item-inline">
-                    <a class="link" href="/isTriangle/isTriangle.html">Is triangle?</a>
+                    <a class="link" href="/isTriangle.html">Is triangle?</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/quiz/quiz.html">Quiz</a>
+                    <a class="link" href="/quiz.html">Quiz</a>
                 </li>
                 <li class="list-item-inline">
                     <a class="link  link-active " href="/hypotenuse/hyppotenuse.html">Hypotenuse</a>
