--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a class="link  link-active " href="/index.html">Is triangle?</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/quiz.js">Quiz</a>
+                    <a class="link" href="/quiz.html">Quiz</a>
                 </li>
                 <li class="list-item-inline">
                     <a class="link" href="">Hypotenuse</a>
