--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -19,10 +19,10 @@
                     <a class="link" href="/quiz.html">Quiz</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link  link-active " href="/hypotenuse/hyppotenuse.html">Hypotenuse</a>
+                    <a class="link  link-active " href="/hyppotenuse.html">Hypotenuse</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/area/area.html">Area of Triangle</a>
+                    <a class="link" href="/area.html">Area of Triangle</a>
                 </li>
             </ul>
         </nav>
