--- a/area.html
+++ b/area.html
@@ -19,7 +19,7 @@
                     <a class="link" href="/quiz.html">Quiz</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/hyppotenuse.html">Hypotenuse</a>
+                    <a class="link" href="/hypotenuse.html">Hypotenuse</a>
                 </li>
                 <li class="list-item-inline">
                     <a class="link link-active " href="/area.html">Area of Triangle</a>
