--- a/quiz.html
+++ b/quiz.html
@@ -21,10 +21,10 @@
                 <a class="link link-active" href="/quiz.html">Quiz</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/hypotenuse/hyppotenuse.html">Hypotenuse</a>
+                <a class="link" href="/hypotenuse.html">Hypotenuse</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/area/area.html">Area of Triangle</a>
+                <a class="link" href="/area.html">Area of Triangle</a>
             </li>
         </ul>
     </nav>
