--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -32,7 +32,7 @@
     <input type="number" class="input-value">
     <label for="input-value2" class="labels">Enter base value (b) =</label>
     <input  type="number" class="input-value">
-    <button id="submit-btn">Calculate Hypotenuse</button>
+    <button id="calculate-btn">Calculate Hypotenuse</button>
     <h1>Hypotenuse Formula</h1>
     <h3>√(base² + height²)</h3>
     <div id="output"></div>
@@ -58,5 +58,6 @@
           </ul>
         </div>
       </footer>
+      <script src="/hypotenuse.js"></script>
 </body>
 </html>
