--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -13,7 +13,7 @@
             <div class="nav-brand">Fun with Triangles</div>
             <ul class="nav">
                 <li class="list-item-inline">
-                    <a class="link" href="/isTriangle.html">Is triangle?</a>
+                    <a class="link" href="/index.html">Is triangle?</a>
                 </li>
                 <li class="list-item-inline">
                     <a class="link" href="/quiz.html">Quiz</a>
