--- a/area.html
+++ b/area.html
@@ -28,13 +28,12 @@
         </nav>
     </header>
     <h1>Calculate  Area of Triangle</h1>
-    <label for="side1" class="labels">Enter first side of a triangle</label>
+    <h3>Area of a Triangle = 1/2(base + height)</h3>
+    <label for="side1" class="labels">Base(in cm)</label>
     <input required type="number"  class="input-side">
-    <label for="side2" class="labels">Enter first side of a triangle</label>
+    <label for="side2" class="labels">Height(in cm)</label>
     <input  required type="number"  class="input-side">
-    <label for="side3" class="labels">Enter first side of a triangle</label>
-    <input required type="number"  class="input-side">
-    <button id="calculate">Calculate</button>
+    <button id="calculate">Calculate Area</button>
     <div id="area-Of-triangle"></div>
     <footer id="footer-size">
         <div id="footer">© | 2022 | adarshbalika</div>
