--- a/area.html
+++ b/area.html
@@ -56,6 +56,6 @@
           </ul>
         </div>
       </footer>
-      <script src="/area/area.js"></script>
+      <script src="/area.js"></script>
 </body>
 </html>
