--- a/area.html
+++ b/area.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <h1>Calculate  Area of Triangle</h1>
-    <h3>Area of a Triangle = 1/2(base + height)</h3>
+    <h3>Area of a Triangle = 1/2(base * height)</h3>
     <label for="side1" class="labels">Base(in cm)</label>
     <input required type="number"  class="input-side">
     <label for="side2" class="labels">Height(in cm)</label>
