--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </header>
     <h1>Angles of Triangles</h1>
     <label for="angle1" class="labels">Angle1</label>
-    <input placeholder="Enter angle1" type="text" class="input-angle">
+    <input placeholder="Enter angle1" type="number" class="input-angle">
     <label for="angle1" class="labels">Angle1</label>
-    <input placeholder="Enter angle2" type="text" class="input-angle">
+    <input placeholder="Enter angle2" type="number" class="input-angle">
     <label for="angle1" class="labels">Angle1</label>
-    <input placeholder="Enter angle3" type="text" class="input-angle">
+    <input placeholder="Enter angle3" type="number" class="input-angle">
     <button id="is-triangle-btn">Is Triangle?</button>
     <div id="output-box"></div>
 
