--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -30,7 +30,7 @@
     <h1>Calculate Hypotenuse of a triangle</h1>
     <label for="input-value1" class="labels">Enter base value (a) =</label>
     <input type="number" class="input-value">
-    <label for="input-value2" class="labels">Enter base value (b) =</label>
+    <label for="input-value2" class="labels">Enter height value (b) =</label>
     <input  type="number" class="input-value">
     <button id="calculate-btn">Calculate Hypotenuse</button>
     <h1>Hypotenuse Formula</h1>
